--- a/.env.example
+++ b/.env.example
@@ -1,70 +1,48 @@
-# -------------------------
 # Django
-# -------------------------
-DJANGO_DEBUG=1
-DJANGO_SECRET_KEY=replace-me-with-a-long-random-string
-DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1
-DJANGO_CSRF_TRUSTED_ORIGINS=http://localhost:8000
+DJANGO_DEBUG=0
+DJANGO_SECRET_KEY=replace-me-with-a-real-secret-key-use-python-c-import-secrets-print-secrets-token-urlsafe-50
+DJANGO_ALLOWED_HOSTS=tkgtimesheets.com,www.tkgtimesheets.com,localhost,127.0.0.1
+DJANGO_CSRF_TRUSTED_ORIGINS=https://tkgtimesheets.com,https://www.tkgtimesheets.com,http://localhost:8000
 
-# Where Django will store uploaded receipts (dev = local volume)
-MEDIA_ROOT=/app/media
-EXPORT_ROOT=/app/exports
-
-# Path to your Excel template inside the repo/container
-# Put your template at: apps/exports/templates/Template TIMESHEET.xlsx (recommended)
-TIMESHEET_TEMPLATE_PATH=/app/apps/exports/templates/Template TIMESHEET.xlsx
-
-# -------------------------
-# Database (Postgres)
-# -------------------------
+# Database
 POSTGRES_DB=tkg_te
 POSTGRES_USER=tkg_te
-POSTGRES_PASSWORD=tkg_te
-DATABASE_URL=postgres://tkg_te:tkg_te@db:5432/tkg_te
+POSTGRES_PASSWORD=replace-with-strong-password
+DATABASE_URL=postgres://tkg_te:replace-with-strong-password@db:5432/tkg_te
 
-# -------------------------
 # Redis / Celery
-# -------------------------
 REDIS_URL=redis://redis:6379/0
 CELERY_BROKER_URL=redis://redis:6379/0
 CELERY_RESULT_BACKEND=redis://redis:6379/0
 
-# -------------------------
-# Email (dev defaults to console backend unless set)
-# -------------------------
-EMAIL_BACKEND=django.core.mail.backends.console.EmailBackend
-DEFAULT_FROM_EMAIL=no-reply@company.com
+# Auth: Microsoft OAuth (Entra ID)
+MICROSOFT_CLIENT_ID=512df3d7-dc44-4b5f-a1f4-2ac34f2c06f6
+MICROSOFT_CLIENT_SECRET=ZeS8Q~gg0olZwKg4jJ57ZnZRblexNIBPxS1ktcRM
+MICROSOFT_TENANT=561f6a00-03a7-4383-bfd8-7149bc9a7cc2
 
-# If you want SMTP instead:
+# Hardening: restrict who can log in
+ALLOWED_EMAIL_DOMAINS=thekeystonegroup.com
+ALLOWED_TENANT_IDS=561f6a00-03a7-4383-bfd8-7149bc9a7cc2
+
+# File storage
+MEDIA_ROOT=/app/media
+EXPORT_ROOT=/app/exports
+
+# Email settings (placeholder - configure when ready)
+EMAIL_BACKEND=django.core.mail.backends.console.EmailBackend
+DEFAULT_FROM_EMAIL=timesheets@thekeystonegroup.com
+
+# SMTP settings for production (uncomment and fill when ready)
 # EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
 # EMAIL_HOST=smtp.office365.com
 # EMAIL_PORT=587
-# EMAIL_HOST_USER=...
-# EMAIL_HOST_PASSWORD=...
-# EMAIL_USE_TLS=1
+# EMAIL_HOST_USER=timesheets@thekeystonegroup.com
+# EMAIL_HOST_PASSWORD=your-email-password
+# EMAIL_USE_TLS=True
 
-# -------------------------
-# Microsoft OAuth (Entra ID / Azure AD)
-# -------------------------
-MICROSOFT_CLIENT_ID=replace-me
-MICROSOFT_CLIENT_SECRET=replace-me
-# Recommended: your tenant GUID for single-tenant. Alternatives: "organizations" or "common"
-MICROSOFT_TENANT=replace-me
-
-# Hard restriction: only allow these email domains to sign in
-# Comma-separated list, no @ symbol:
-ALLOWED_EMAIL_DOMAINS=company.com
-
-# Optional hard restriction: only allow these tenant IDs (comma-separated GUIDs)
-ALLOWED_TENANT_IDS=
-
-# -------------------------
-# App behavior
-# -------------------------
-RECEIPT_REQUIRED_THRESHOLD=20.00
+# App rules
+RECEIPT_REQUIRED_THRESHOLD=20.0
 TIME_INCREMENT_MINUTES=15
 
-# -------------------------
 # Logging
-# -------------------------
 LOG_LEVEL=INFO
