--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Django>=5.0,<5.3
 psycopg[binary]>=3.1,<4.0
 django-environ>=0.11,<1.0
 django-allauth>=0.60,<1.0
+requests>=2.31,<3.0
 django-simple-history>=3.7,<4.0
 whitenoise>=6.7,<7.0
 
