Fix certbot volume mounts to use bind mounts

--- a/compose.prod.yml
+++ b/compose.prod.yml
@@ -9,8 +9,8 @@ services:
     volumes:
       - static_files:/app/staticfiles:ro
       - media_files:/app/media:ro
-      - certbot_conf:/etc/letsencrypt:ro
-      - certbot_www:/var/www/certbot:ro
+      - ./certbot/conf:/etc/letsencrypt:ro
+      - ./certbot/www:/var/www/certbot:ro
     depends_on:
       - web
     restart: always
@@ -18,8 +18,8 @@ services:
   certbot:
     image: certbot/certbot:latest
     volumes:
-      - certbot_conf:/etc/letsencrypt
-      - certbot_www:/var/www/certbot
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
     entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
 
   web:
@@ -95,5 +95,3 @@ volumes:
   static_files:
   media_files:
   export_files:
-  certbot_conf:
-  certbot_www:
