Implement upload-first workflow and partner exports.
Replaces manual entry with workbook uploads, validates submissions, and adds roster seeding, partner dashboards, payroll exports, UI tweaks, and nginx DNS re-resolve. Also tightens Microsoft login to rostered users and removes the intermediate allauth screen.

--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -1,7 +1,3 @@
-upstream django {
-    server web:8000;
-}
-
 server {
     listen 80;
     server_name tkgtimesheets.com www.tkgtimesheets.com;
@@ -18,6 +14,8 @@ server {
 server {
     listen 443 ssl http2;
     server_name tkgtimesheets.com www.tkgtimesheets.com;
+
+    resolver 127.0.0.11 valid=10s;
 
     ssl_certificate /etc/letsencrypt/live/tkgtimesheets.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/tkgtimesheets.com/privkey.pem;
@@ -49,7 +47,8 @@ server {
     }
 
     location / {
-        proxy_pass http://django;
+        set $upstream http://web:8000;
+        proxy_pass $upstream;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
